--- a/front/package.json
+++ b/front/package.json
@@ -21,7 +21,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "sass --watch scss/csshake.scss:docs/csshake.css",
+    "build": "npm run build:raw && npm run build:min && npm run build:docs && node downloadIndex.js",
+    "build:docs": "sass scss/csshake.scss:docs/csshake.css --style compressed",
+    "build:raw": "sass scss/:dist/",
+    "build:min": "mkdir -p dist/min && sass --style compressed scss/:dist/min && npm run suffix && npm run move",
+    "suffix": "for file in dist/min/*.css; do mv \"$file\" \"${file%.css}.min.css\"; done",
+    "move": "mv dist/min/*.css dist && rm -r dist/min"
   },
   "eslintConfig": {
     "extends": [
