--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently --kill others\"cd back & npm start\" \"cd front & npm start\""
+    "start": "concurrently --kill others\"cd back & npm start\" \"cd front & npm start\"",
+    "build": "react-scripts build"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,8 @@
   "dependencies": {
     "concurrently": "^7.6.0",
     "csshake": "^1.7.0"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
